syntax = "proto3";

option go_package = "github.com/DIMO-Network/model-garage/pkg/grpc";

package grpc;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

// FetchService defines the gRPC service for fetching DIMO files
service FetchService {
  // GetLatestFileName returns the latest filename for the given options
  rpc GetLatestFileName (GetLatestFileNameRequest) returns (GetLatestFileNameResponse);

  // GetFileNames fetches and returns the list of filenames that match the specified options
  rpc GetFileNames (GetFileNamesRequest) returns (GetFileNamesResponse);

  // GetLatestData fetches and returns the latest file that matches the specified options
  rpc GetLatestFile (GetLatestFileRequest) returns (GetLatestFileResponse);

  // GetFiles fetches and returns the list of files that match the specified options
  rpc GetFiles (GetFilesRequest) returns (GetFilesResponse);
}

// SearchOptions provides filtering options to narrow down the search results for files
// based on various criteria. If a field is not set, it is not used for filtering.
message SearchOptions {
  // Only include events after this timestamp.
  google.protobuf.Timestamp after = 1;
  
  // Only include events before this timestamp.
  google.protobuf.Timestamp before = 2;
  
  // Whether to sort results in ascending order by timestamp.
  google.protobuf.BoolValue timestamp_asc = 3;
  
  // Primary filler value used to filter events.
  google.protobuf.StringValue primary_filler = 4;
  
  // Data type to filter events.
  google.protobuf.StringValue data_type = 5;
  
  // The subject of the event to filter.
  google.protobuf.StringValue subject = 6;
  
  // Secondary filler value used to filter events.
  google.protobuf.StringValue secondary_filler = 7;
  
  // The source identifier responsible for creating the data.
  google.protobuf.StringValue source = 8;
  
  // The producer of the data, source entity responsible for creating the data.
  google.protobuf.StringValue producer = 9;
  
  // Additional optional metadata for more precise filtering.
  google.protobuf.StringValue optional = 10;
}

// Index contains the index information for files
// that can be used to store or retrieve data related to specific NFTs.
message Index {
  // The timestamp indicating when the cloud event was created.
  google.protobuf.Timestamp timestamp = 1;
  
  // Primary filler value used to categorize the event.
  string primary_filler = 2;
  
  // The type of data this event represents.
  string data_type = 3;
  
  // The subject NFT associated with this event.
  google.protobuf.StringValue subject = 4;
  
  // Secondary filler value used to further categorize the event.
  string secondary_filler = 5;
  
  // The identifier of the source that created this data.
  string source = 6;
  
  // The producer of the data, represented as an NFTDID.
  google.protobuf.StringValue producer = 7;
  
  // Optional metadata associated with the event.
  string optional = 8;
}

// GetLatestFileNameRequest includes search options to filter the events.
message GetLatestFileNameRequest {
  SearchOptions options = 1;
}

// GetLatestFileNameResponse provides the latest filename retrieved for the specified search criteria.
message GetLatestFileNameResponse {
  // The latest filename retrieved for the specified search criteria.
  string filename = 1;
}

// GetFileNamesRequest includes search options to filter the events.
message GetFileNamesRequest{
  // Search options to filter the events.
  SearchOptions options = 1;
  
  // The maximum number of filenames to return.
  int32 limit = 2;
}

// GetFileNamesResponse returns the list of filenames retrieved for the specified search criteria.
message GetFileNamesResponse{
  // The list of filenames retrieved for the specified search criteria.
  repeated string filenames = 1;
}

// GetLatestFileRequest includes search options to filter the events.
message GetLatestFileRequest {
  // Search options to filter the events.
  SearchOptions options = 1;
}

// GetLatestFileResponse provides the data retrieved from the latest cloud event.
message GetLatestFileResponse {
  // The data retrieved from the latest cloud event.
  bytes data = 1;
}

// GetFilesRequest includes search options to filter the events.
message GetFilesRequest {
  // Search options to filter the events.
  SearchOptions options = 1;
  
  // The maximum number of files to return.
  int32 limit = 2;
}

// GetFilesResponse provides the list of data retrieved from the files.
message GetFilesResponse {
  // The list of data retrieved from the files.
  repeated bytes data = 1;
}
